--- a/contact/index.html
+++ b/contact/index.html
@@ -62,19 +62,19 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutUs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/#what-we-do">What we do</a>
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
+                        <a class="dropdown-item" href="/#what-we-do-section" data-target="what-we-do-section" >What we do</a>
                         <a class="dropdown-item" href="/mission">Vision & Mission</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="company" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Company
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="company">
                         <a class="dropdown-item" href="/history">History</a>
                         <a class="dropdown-item" href="/leadership">Leadership</a>
                     </div>
@@ -92,26 +92,30 @@
 
     </nav>
 </header>
-            <div style="" class="pt-8 pb-2">
-        <h1 style="text-align: center">Contact</h1>
-        <p style="text-align: center">We are here to answer any questions you may have.</p>
-    <section>
-        <div class="row no-gutters">
-            <div class="col-lg-12 bg-gray-dark bg-dark p-8">
-                <h1 class="text-color-yellow h4">Head Office</h1>
-        <p>
-            Rensource Distributed Energy Limited
-            3B, Tiamiyu Savage Street
-            Victoria Island, Lagos
-            Nigeria
+            <div style="" class="pt-8 pb-2 bg-white">
+        <div class="mb-6">
+            <h1 style="text-align: center">Contact</h1>
+            <p class="text-center pl-6 pr-6">We are here to answer any questions you may have.</p>
+        </div>
 
-            <span>01-631 1797</span>
-            <span>support@rensource.energy</span>
-        </p>
-            </div>
-            <div class="col-lg-12">
-                Map
-            </div>
+    <section style="background: #232323">
+<!--        <div class="container">-->
+            <div class="row no-gutters">
+                <div class="col-lg-12 p-8">
+                    <h1 class="text-color-yellow h4">Head Office</h1>
+                    <p>
+                        Rensource Distributed Energy Limited<br/>
+                        3B, Tiamiyu Savage Street<br/>
+                        Victoria Island, Lagos<br/>
+                        Nigeria<br/>
+                        <span>01-631 1797</span><br/>
+                        <span>support@rensource.energy</span><br/>
+                    </p>
+                </div>
+                <div class="col-lg-12">
+                    <div id="map" style="position: relative; overflow: hidden;height: 100%"></div>
+                </div>
+<!--            </div>-->
         </div>
     </section>
     <section>
@@ -120,7 +124,7 @@
                 <img src="/images/worker.jpg" class="img-fluid" />
             </div>
             <div class="col-xs-24 col-lg-12 bg-yellow">
-                <form class="p-8">
+                <form class="p-3 p-lg-8">
                     <h3>Contact</h3>
                     <div class="form-group">
                         <div class="label d-none">Name</div>
@@ -135,7 +139,7 @@
                         <div class="label d-none">Body</div>
                     <textarea class="form-control" name="body" id="body" placeholder="Type your message here..."></textarea>
                     </div>
-                    <button class="btn btn-gray-dark">Send</button>
+                    <button class="btn btn-gray-dark text-color-yellow m-auto d-block">Send Us An Email</button>
                 </form>
             </div>
         </div>
@@ -143,18 +147,46 @@
     <section class="pt-8 pb-6 bg-white">
         <div class="row justify-content-center">
             <div class="col-xs-24 col-lg-10">
-                <form class="bg-yellow br-6 p-8 text-center sub" style="background: url(/images/idea.svg) no-repeat;background-position: bottom right">
+                <form class="bg-yellow br-6 p-lg-8 p-3 text-center sub" style="background: url(/images/idea.svg) no-repeat;background-position: bottom right">
                     <h4>Subscribe to our newsletter to receive more information and updates.</h4>
                     <div class="form-group">
                         <div class="label d-none">Email</div>
-                        <input type="text" class="form-control bg-transparent" name="email" id="email" placeholder="Email"/>
+                        <input type="text" class="form-control bg-transparent" name="email" id="emailSub" placeholder="Email" style="border-bottom: 1px solid #232323"/>
                     </div>
-                    <button class="btn btn-gray-dark">Send</button>
+                    <button class="btn btn-gray-dark text-color-yellow mr-auto">Subscribe</button>
                 </form>
             </div>
         </div>
     </section>
-</div>            <footer style="color:#B0B0B0;background-color: #282828" class="pt-6 t-14 leading-5">
+</div>
+
+<script>
+    function initMap() {
+        // Create a map object and specify the DOM element for display.
+        var map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: 6.423875, lng: 3.4261262 },
+            mapTypeId: 'terrain',
+            // 6.442962, 3.426196
+            // 6.462599, 3.553789
+            // ,
+            scrollwheel: true,
+            zoom: 18,
+        });
+        var marker = new google.maps.Marker({
+            position: {lat: 6.423875, lng: 3.4261262 },
+            map: map,
+            title: 'Rensource Distributed Energy Limited',
+            animation: 'drop'
+        });
+        marker.setLabel({ fontWeight: '300', color: '#434343', text:'Rensource Distributed Energy Limited'});
+        marker.setIcon({ labelOrigin: { x: 12, y:20}})
+
+        // map.setClickableIcons(true)
+
+    }
+</script>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCkc4H0yMKg052aK7gurXYPQlnZnoyw0mw&amp;callback=initMap"></script>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-md-left order-2 order-sm-1">
@@ -197,7 +229,10 @@
                 </nav>
                 <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
             </div>
-            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column; align-items: flex-end">
+            <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
+                <img src="/images/toTop.svg" class="img-fluid">
+            </span>
+            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column;">
                 <div>
                     <h3 class="footer-h">Also connect with us on social media</h3>
                     <p style="display: inline-block;">
