--- a/history/index.html
+++ b/history/index.html
@@ -62,19 +62,19 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutUs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/#what-we-do">What we do</a>
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
+                        <a class="dropdown-item" href="/#what-we-do-section" data-target="what-we-do-section" >What we do</a>
                         <a class="dropdown-item" href="/mission">Vision & Mission</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="company" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Company
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="company">
                         <a class="dropdown-item" href="/history">History</a>
                         <a class="dropdown-item" href="/leadership">Leadership</a>
                     </div>
@@ -95,7 +95,7 @@
             <section style="" class="pt-8 pb-8 bg-white">
     <div class="container">
         <div class="row">
-            <div class="col-xs-24 col-lg-12" style="padding: 5rem 4rem 3rem 0;">
+            <div class="col-xs-24 col-lg-12 p-4">
                 <h2 class="mb-5">
                     A brief story:
                 </h2>
@@ -105,7 +105,7 @@
                 </p>
             </div>
             <div class="col-xs-24 col-lg-12">
-                <img src="/images/office1.jpg">
+                <img src="/images/office1.jpg" class="img-fluid">
             </div>
         </div>
     </div>
@@ -113,9 +113,9 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-24 col-lg-12">
-                <img src="/images/office2.jpg">
+                <img src="/images/office2.jpg" class="img-fluid">
             </div>
-            <div class="col-xs-24 col-lg-12" style="padding: 5rem 0 3rem 3rem;">
+            <div class="col-xs-24 col-lg-12 p-4">
                 <p>
                     The company is Nigeria’s fastest growing
                     provider of off-grid power. It offers clean, reliable power to consumers, small businesses and
@@ -125,7 +125,7 @@
             </div>
         </div>
     </div>
-</section>            <footer style="color:#B0B0B0;background-color: #282828" class="pt-6 t-14 leading-5">
+</section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-md-left order-2 order-sm-1">
@@ -168,7 +168,10 @@
                 </nav>
                 <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
             </div>
-            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column; align-items: flex-end">
+            <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
+                <img src="/images/toTop.svg" class="img-fluid">
+            </span>
+            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column;">
                 <div>
                     <h3 class="footer-h">Also connect with us on social media</h3>
                     <p style="display: inline-block;">
