--- a/leadership/index.html
+++ b/leadership/index.html
@@ -62,19 +62,19 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="aboutUs" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         About Us
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="/#what-we-do">What we do</a>
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
+                        <a class="dropdown-item" href="/#what-we-do-section" data-target="what-we-do-section" >What we do</a>
                         <a class="dropdown-item" href="/mission">Vision & Mission</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="company" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Company
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div class="dropdown-menu shadow-sm" aria-labelledby="company">
                         <a class="dropdown-item" href="/history">History</a>
                         <a class="dropdown-item" href="/leadership">Leadership</a>
                     </div>
@@ -109,44 +109,216 @@
 
 <section style="" class="pt-8 pb-8">
     <div class="container">
-        <h2>Founders</h2>
+        <div class="special-h">
+            <span class="before"></span>
+        <h2 class="special-h">Founders</h2>
+            <span class="after"></span>
+        </div>
         <div class="row">
-                        <div class="col-xs-24 col-md-12">
-            <div class="p-6">
-                <img src="/images/photos/AdesinaAdemola.jpg" class="img-fluid mb-2"/>
-                <h1 class="t-24 mb-2">Adesina</h1>
-                <p>Founder &amp; CEO</p>
-                <p style="display: inline-block;">
-                    <span class="d-none">Social Media Handles</span>
-                    <a href="twitter.com" target="_blank" class="p-1">
-                        <span class="social twitter circle">Twitter</span>
-                    </a>
-                    <a href="linkedin.com" target="_blank" class="p-1">
-                        <span class="social linkedin circle">LinkedIn</span>
-                    </a>
-                </p>
-            </div>
-            </div>
-                        <div class="col-xs-24 col-md-12">
-            <div class="p-6">
-                <img src="" class="img-fluid mb-2"/>
-                <h1 class="t-24 mb-2"></h1>
-                <p></p>
-                <p style="display: inline-block;">
-                    <span class="d-none">Social Media Handles</span>
-                    <a href="" target="_blank" class="p-1">
-                        <span class="social twitter circle">Twitter</span>
-                    </a>
-                    <a href="" target="_blank" class="p-1">
-                        <span class="social linkedin circle">LinkedIn</span>
-                    </a>
-                </p>
-            </div>
-            </div>
-                    </div>
+    <div class="col-xs-24 col-md-12">
+        <div class="p-6">
+            <img src="/images/founders/AdesinaAdemola.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Ademola Adesina</h1>
+            <p>Founder & CEO</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-12">
+        <div class="p-6">
+            <img src="/images/founders/ED.png" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Jussi Savukoski</h1>
+            <p>Co-Founder & Executive Director</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
         </div>
     </div>
-</section>            <footer style="color:#B0B0B0;background-color: #282828" class="pt-6 t-14 leading-5">
+</div>
+
+<!--<div class="row">-->
+<!--    -->
+<!--</div>-->    </div>
+</section><section style="" class="pt-8 pb-8 bg-white">
+    <div class="container">
+        <div class="special-h">
+            <span class="before"></span>
+        <h2 class="special-h">Senior Management</h2>
+            <span class="after"></span>
+        </div>
+        <div class="row">
+    <div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/senior_management/coo.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Anu Adasolum</h1>
+            <p>Chief Operating Officer</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/senior_management/director1.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Kolawole Akinboye</h1>
+            <p>Director, Projects</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/senior_management/CTO.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Ikem Emellieze</h1>
+            <p>Chief Techonology Officer</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/senior_management/VP_finance.png" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Oyewole Toriola</h1>
+            <p>VP, Finance</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div>
+    <div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/senior_management/Head_supply_chain.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Sade Fagbola</h1>
+            <p>Head, Commercial Operations and Supply Chain</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/senior_management/Senior_technical_manager.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Hendrik Lühl</h1>
+            <p>Senior Technical Manager</p>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div>
+</div>    </div>
+</section></section><section style="" class="pt-8 pb-8">
+    <div class="container">
+        <div class="special-h">
+            <span class="before"></span>
+        <h2 class="special-h">Board Members</h2>
+            <span class="after"></span>
+        </div>
+        <div class="row">
+    <div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/board/christopher_foy.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Christopher Foy</h1>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/board/david_ladipo.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">David Ladipo</h1>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/board/sasha_israni.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Sasha Israni</h1>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div><div class="col-xs-24 col-md-8">
+        <div class="p-6">
+            <img src="/images/board/pardon_makumbe.jpg" class="img-fluid mb-2"/>
+            <h1 class="t-24 mb-2">Pardon Makumbe</h1>
+            <p style="display: inline-block;">
+                <span class="d-none">Social Media Handles</span>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social twitter circle">Twitter</span>
+                </a>
+                <a href="#" target="_blank" class="p-1">
+                    <span class="social linkedin circle">LinkedIn</span>
+                </a>
+            </p>
+        </div>
+    </div>
+</div>    </div>
+</section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-md-left order-2 order-sm-1">
@@ -189,7 +361,10 @@
                 </nav>
                 <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
             </div>
-            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column; align-items: flex-end">
+            <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
+                <img src="/images/toTop.svg" class="img-fluid">
+            </span>
+            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column;">
                 <div>
                     <h3 class="footer-h">Also connect with us on social media</h3>
                     <p style="display: inline-block;">
