Resolved all issues and Renamed Output for bursting cache

--- a/people/adesina/index.html
+++ b/people/adesina/index.html
@@ -8,7 +8,7 @@
                     <meta name="robots" content="noindex, follow">
                 <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
-        <link href="/dist/app.css" rel="stylesheet" type="text/css" />
+        <link href="/dist/new.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">
 
 
@@ -19,15 +19,15 @@
         <div class="container clearfix">
             <div class="float-right">
                 <p class="cosil" style="display: inline-block;margin: 0">
-                    <a href="https://facebook.com/#" class="p-2" target="_blank">
+                    <a href="https://web.facebook.com/rensource" class="p-2" target="_blank">
                         <span class="social facebook sm">Facebook</span>
                     </a>
-                    <a href="https://twitter.com/#" class="p-2" target="_blank">
+                    <a href="https://twitter.com/rensourceenergy" class="p-2" target="_blank">
                         <span class="social twitter sm">Twitter</span>
                     </a>
-                    <a href="https://www.instagram.com/#" class="p-2" target="_blank">
+                    <a href="https://www.instagram.com/rensource" class="p-2" target="_blank">
                         <span class="social instagram sm">Instagram</span>
-                    </a><a href="https://www.instagram.com/#" class="p-2" target="_blank">
+                    </a><a href="https://www.linkedin.com/company/rensource-energy/" class="p-2" target="_blank">
                         <span class="social linkedin sm">LinkedIn</span>
                     </a>
                 </p>
@@ -137,11 +137,11 @@
                 <nav  class="">
                     <ul id="menu-footer" class="nav nav-footer flex-column">
                     <li  class="">
-                        <a href="#" class="">Overview</a></li>
+                        <a href="/history" class="">Overview</a></li>
                     <li class="">
-                        <a href="" class="">About Us</a></li>
+                        <a href="/history" class="">About Us</a></li>
                     <li class="">
-                        <a href="http://#" class="">
+                        <a href="/leadership" class="">
                             Our Team
                         </a>
                     </li>
@@ -156,16 +156,16 @@
                 <div>
                     <h3 class="footer-h">Also connect with us on social media</h3>
                     <p style="display: inline-block;">
-                        <a href="https://facebook.com/#" target="_blank" class="p-1">
+                        <a href="https://facebook.com/rensource" target="_blank" class="p-1">
                             <span class="social facebook duo">Facebook</span>
                         </a>
-                        <a href="https://twitter.com/#" target="_blank" class="p-1">
+                        <a href="https://twitter.com/rensourceenergy" target="_blank" class="p-1">
                             <span class="social twitter duo">Twitter</span>
                         </a>
-                        <a href="https://www.instagram.com/#" target="_blank" class="p-1">
+                        <a href="https://www.instagram.com/rensource" target="_blank" class="p-1">
                             <span class="social instagram duo">Instagram</span>
                         </a>
-                        <a href="https://www.instagram.com/#" target="_blank" class="p-1">
+                        <a href="https://www.linkedin.com/company/rensource-energy/" target="_blank" class="p-1">
                             <span class="social linkedin duo">LinkedIn</span>
                         </a>
                     </p>
@@ -180,6 +180,6 @@
         </div>
 </footer>                
                                 <script src="/dist/vendor.js"></script>
-        <script src="/dist/app.js"></script>
+        <script src="/dist/new.js"></script>
     </body>
 </html>
