fix url redirect

--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
                         Company
                     </a>
                     <div class="dropdown-menu shadow-sm" aria-labelledby="company">
-                        <a class="dropdown-item" href="/history/index.html">History</a>
-                        <a class="dropdown-item" href="/leadership/index.html">Leadership</a>
+                        <a class="dropdown-item" href="/history">History</a>
+                        <a class="dropdown-item" href="/leadership">Leadership</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/news/index.html">News</a>
+                    <a class="nav-link" href="/news">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact/index.html">Contact</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                 </li>
 
             </ul>
