2nd Review: Tablet responsive, Uniform portrait sizes, Back to top

--- a/alerts/index.html
+++ b/alerts/index.html
@@ -8,7 +8,7 @@
                     <meta name="robots" content="noindex, follow">
                 <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
-        <link href="/dist/new.css" rel="stylesheet" type="text/css" />
+        <link href="/dist/top.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">
 
 
@@ -37,7 +37,7 @@
     </nav>
     <nav class="navbar navbar-expand-md navbar-light bg-yellow">
         <div class="container">
-        <a class="pt-2 pb-2" href="/">
+        <a class="pt-2 pb-2" href="/index.html">
             <span class="mr-3">
                 <svg width="28" height="27" viewBox="0 0 28 27" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="28" height="27" fill="url(#pattern0)"/>
@@ -67,7 +67,7 @@
                     </a>
                     <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
                         <a class="dropdown-item" href="/#what-we-do-section" data-target="what-we-do-section" >What we do</a>
-                        <a class="dropdown-item" href="/mission">Vision & Mission</a>
+                        <a class="dropdown-item" href="/mission/index.html">Vision & Mission</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -75,15 +75,15 @@
                         Company
                     </a>
                     <div class="dropdown-menu shadow-sm" aria-labelledby="company">
-                        <a class="dropdown-item" href="/history">History</a>
-                        <a class="dropdown-item" href="/leadership">Leadership</a>
+                        <a class="dropdown-item" href="/history/index.html">History</a>
+                        <a class="dropdown-item" href="/leadership/index.html">Leadership</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/news">News</a>
+                    <a class="nav-link" href="/news/index.html">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/contact/index.html">Contact</a>
                 </li>
 
             </ul>
@@ -130,7 +130,7 @@
       </div>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
-            <div class="col-lg-8 text-center text-md-left order-2 order-sm-1">
+            <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
                 <h3 style="font-size: 1em;font-weight:400;margin: 10px 0;color:white">
                     <span class="pr-3">
                         <svg width="28" height="27" viewBox="0 0 28 27" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -153,16 +153,16 @@
                 <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
                 <p>1-631 1797</p><p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
             </div>
-            <div class="col-lg-6 text-center text-md-left order-1 order-sm-2 d-flex" style="flex-direction: column; align-items: center">
+            <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex" style="flex-direction: column; align-items: center">
                 <h3 class="footer-h">Company</h3>
                 <nav  class="">
                     <ul id="menu-footer" class="nav nav-footer flex-column">
                     <li  class="">
-                        <a href="/history" class="">Overview</a></li>
+                        <a href="/history/index.html" class="">Overview</a></li>
                     <li class="">
-                        <a href="/history" class="">About Us</a></li>
+                        <a href="/history/index.html" class="">About Us</a></li>
                     <li class="">
-                        <a href="/leadership" class="">
+                        <a href="/leadership/index.html" class="">
                             Our Team
                         </a>
                     </li>
@@ -173,7 +173,7 @@
             <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                 <img src="/images/toTop.svg" class="img-fluid">
             </span>
-            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column;">
+            <div class="col-lg-8 d-flex text-center text-lg-left order-3" style="flex-direction: column;">
                 <div>
                     <h3 class="footer-h">Also connect with us on social media</h3>
                     <p style="display: inline-block;">
@@ -201,6 +201,6 @@
         </div>
 </footer>                
                                 <script src="/dist/vendor.js"></script>
-        <script src="/dist/new.js"></script>
+        <script src="/dist/top.js"></script>
     </body>
 </html>
