--- a/happy-birthday-sculpin.html
+++ b/happy-birthday-sculpin.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head lang="en">
-        <title>Categories &mdash; Rensource &mdash; Revolutionizing energy provision in Africa</title>
+        <title>Happy Birthday Sculpin! &mdash; Rensource &mdash; Revolutionizing energy provision in Africa</title>
         <meta charset="utf-8">
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-                    <meta name="robots" content="noindex, follow">
-                <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">
+            <meta name="robots" content="index, follow">
+        <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
         <link href="/dist/top.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">
@@ -92,11 +92,30 @@
 
     </nav>
 </header>
-            <h2>Categories</h2>
+                <article>
+        <header>
+            <h2>Happy Birthday Sculpin! <small>post</small></h2>
+        </header>
+        <div>
+            <p>The first commit to the Sculpin repository was made on December 20th, 2011.
+What a trip since then!</p>
 
-<div>
-<a href="/blog/categories/personal">personal</a>
-</div>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
+<p>Sculpin has always been a big fan of <a href="http://daringfireball.net/projects/markdown/">Markdown</a>. So this post was
+written in Markdown. :)</p>
+
+        </div>
+                    <p class="categories">
+            Categories:
+                        <a href="/blog/categories/personal">personal</a>                        </p>
+                            <p class="tags">
+            Tags:
+                        <a href="/blog/tags/sculpin">sculpin</a>,                         <a href="/blog/tags/markdown">markdown</a>                        </p>
+        
+            </article>
+
+
+
+            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
