--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                     <meta name="robots" content="noindex, follow">
                 <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
-        <link href="/dist/new.css" rel="stylesheet" type="text/css" />
+        <link href="/dist/top.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">
 
 
@@ -37,7 +37,7 @@
     </nav>
     <nav class="navbar navbar-expand-md navbar-light bg-yellow">
         <div class="container">
-        <a class="pt-2 pb-2" href="/">
+        <a class="pt-2 pb-2" href="/index.html">
             <span class="mr-3">
                 <svg width="28" height="27" viewBox="0 0 28 27" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <rect width="28" height="27" fill="url(#pattern0)"/>
@@ -67,7 +67,7 @@
                     </a>
                     <div class="dropdown-menu shadow-sm" aria-labelledby="aboutUs">
                         <a class="dropdown-item" href="/#what-we-do-section" data-target="what-we-do-section" >What we do</a>
-                        <a class="dropdown-item" href="/mission">Vision & Mission</a>
+                        <a class="dropdown-item" href="/mission/index.html">Vision & Mission</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -75,15 +75,15 @@
                         Company
                     </a>
                     <div class="dropdown-menu shadow-sm" aria-labelledby="company">
-                        <a class="dropdown-item" href="/history">History</a>
-                        <a class="dropdown-item" href="/leadership">Leadership</a>
+                        <a class="dropdown-item" href="/history/index.html">History</a>
+                        <a class="dropdown-item" href="/leadership/index.html">Leadership</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/news">News</a>
+                    <a class="nav-link" href="/news/index.html">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
+                    <a class="nav-link" href="/contact/index.html">Contact</a>
                 </li>
 
             </ul>
@@ -191,7 +191,7 @@
     <div class="row ">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xs-24 col-lg-16">
+                <div class="col-xs-24 col-sm-24 col-lg-16">
                     <span style="">
                         <h2 class="text-color-gray-dark t-36 mb-4" style="font-weight: 700">Leading technology-driven developer of <span class="text-color-yellow">renewable</span> energy</h2>
                         <p class="">
@@ -201,7 +201,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-xs-24 col-sm-6 col-lg-16">
+                <div class="col-xs-24 col-sm-24 col-lg-16">
                     <div class="videoWrapper">
                     <video
                             id="tech-driven"
@@ -229,11 +229,11 @@
     <div class="row">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-xs-24 col-md-11">
+                <div class="col-xs-24 col-sm-24 col-md-11">
                         <span style="">
                         <h2 class="">What we do</h2>
                         <span class="ruler"></span>
-                    <div class="col-lg-24 hide-xs">
+                    <div class="col-lg-24 col-sm-24 hide-xs">
                         <p class="">
                             Enjoy this short infographic clip of how we work at Rensource
                         </p>
@@ -259,8 +259,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-12">
-                    <div class="col-xs-24 col-sm-6 col-lg-24">
+                <div class="col-xs-24 col-sm-24 col-md-12">
+                    <div class="col-xs-24 col-lg-24">
                     <div class="card mb-3">
                         <div class="card_body">
                             <span class="fancy-number">
@@ -272,7 +272,7 @@
                             </p>
                         </div>
                     </div>
-                </div><div class="col-xs-24 col-sm-6 col-lg-24">
+                </div><div class="col-xs-24 col-lg-24">
                     <div class="card mb-3">
                         <div class="card_body">
                             <span class="fancy-number">
@@ -285,7 +285,7 @@
                             </p>
                         </div>
                     </div>
-                </div><div class="col-xs-24 col-sm-6 col-lg-24">
+                </div><div class="col-xs-24 col-lg-24">
                     <div class="card mb-3">
                         <div class="card_body">
                             <span class="fancy-number">
@@ -298,7 +298,7 @@
                             </p>
                         </div>
                     </div>
-                </div><div class="col-xs-24 col-sm-6 col-lg-24">
+                </div><div class="col-xs-24 col-lg-24">
                     <div class="card  mb-3">
                         <div class="card_body">
                             <span class="fancy-number">
@@ -311,7 +311,7 @@
                             </p>
                         </div>
                     </div>
-                </div><div class="col-xs-24 col-sm-6 col-lg-24">
+                </div><div class="col-xs-24 col-lg-24">
                     <div class="card mb-3">
                         <div class="card_body">
                             <span class="fancy-number">
@@ -333,7 +333,7 @@
     background-position: -150px center;">
     <div class="container-fluid">
         <div class="row ">
-            <div class="col-xs-24 col-sm-6 col-lg-7">
+            <div class="col-xs-24 col-lg-7">
                     <span style="">
                         <h2>Testimonials</h2>
                         <span class="ruler"></span>
@@ -342,7 +342,7 @@
                         </p>
                     </span>
             </div>
-            <div class="col-xs-24 col-sm-6 col-lg-17">
+            <div class="col-xs-24 col-lg-17">
                 <div class="testimonials owl-carousel">
                     <div class="card testimonial" style="width: 300px; position:relative;">
                         <img class="img-fluid" src="/images/testimonials/Adesola.jpg" style="border-radius: 12px 12px 0 0">
@@ -356,7 +356,7 @@
                             “Working with Rensource team has been seamless given their highly dedicated and professional team. We believe in the work that Rensource Energy is doing in the renewable energy space, it is because of this that Rensource Energy is first company in this space to receive local funding through “The Off-grid Power Facility Initiative” set up by the Central Bank of Nigeria (CBN) and the Rural Electrification Agency (REA).”                        </div>
                         </div>
                     <div class="card testimonial" style="width: 300px">
-                        <img class="img-fluid" src="/images/Etop.jpg" style="border-radius: 12px 12px 0 0">
+                        <img class="img-fluid" src="/images/testimonials/Etop.jpg" style="border-radius: 12px 12px 0 0">
                         <div style="overflow: hidden;" data-href="" class="boxout1 progressive replace card_head">
                             <img src="" class="img-fluid" alt="" style="transform: scale(1.05)">
                         </div>
@@ -369,7 +369,7 @@
                             Rensource has been at the forefront of rural electrification in Nigeria through renewable energy sources, it is because of this that cars45 contracted Rensource to deploy renewable power solution infrastructure across 100 cars45 inspection stations across Nigeria. So far we have not been disappointed given the company’s exceptional customer service and dedicated team of professionals                        </div>
                         </div>
                     <div class="card testimonial" style="width: 300px">
-                        <img class="img-fluid" src="/images/Damilola.jpg" style="border-radius: 12px 12px 0 0">
+                        <img class="img-fluid" src="/images/testimonials/Damilola.jpg" style="border-radius: 12px 12px 0 0">
                         <div style="overflow: hidden;" data-href="" class="boxout1 progressive replace card_head">
                             <img src="" class="img-fluid" alt="" style="transform: scale(1.05)">
                         </div>
@@ -382,7 +382,7 @@
                             Rensource Energy has been in charge of the deployment of off grid electricity solutions at various markets across the country, and we are already witnessing positive environmental and economic impacts. This is the sort of intervention we look forward to scaling across Nigeria with support from financial institutions                        </div>
                     </div>
                     <div class="card testimonial" style="width: 300px">
-                        <img class="img-fluid" src="/images/Abosede.jpg" style="border-radius: 12px 12px 0 0">
+                        <img class="img-fluid" src="/images/testimonials/Abosede.jpg" style="border-radius: 12px 12px 0 0">
                         <div style="overflow: hidden;" data-href="" class="boxout1 progressive replace card_head">
                             <img src="" class="img-fluid" alt="" style="transform: scale(1.05)">
                         </div>
@@ -405,14 +405,14 @@
     <div class="row">
         <div class="container">
             <div class="row">
-                <div class="col-xs-24 col-md-15">
+                <div class="col-xs-24 col-sm-12 col-lg-15">
                     <div class="col-lg-24">
-                        <img src="/images/Bitmap.png" class="float-left"/>
-                        <img src="/images/ArielView.png" class="float-right"/>
+                        <img src="/images/Bitmap.png" class="float-left img-fluid" />
+                        <img src="/images/ArielView.png" class="float-right img-fluid"/>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-9">
-                    <div class="col-xs-24 col-sm-6 col-lg-24">
+                <div class="col-xs-24 col-sm-12 col-lg-9">
+                    <div class="col-xs-24 col-sm-24 col-lg-24">
 
                         <svg width="126" height="110" viewBox="0 0 126 110" fill="none"
                              xmlns="http://www.w3.org/2000/svg">
@@ -549,7 +549,7 @@
             <h2 class="text-color-yellow text-center t-32 mb-3">Rensource is already making an impact!</h2>
         </span>
         <div class="row">
-            <div class="col-xs-24 col-sm-6 col-lg-8">
+            <div class="col-xs-24 col-lg-8">
                 <span style="" class="text-center">
                     <h2 class="t-72 text-color-white">
                         12,309L
@@ -558,7 +558,7 @@
                         Litres of Fuel Saved
                     </p>
                 </span>
-            </div><div class="col-xs-24 col-sm-6 col-lg-8">
+            </div><div class="col-xs-24 col-lg-8">
                     <span style="" class="text-center">
                         <h2 class="t-72 text-color-white">
                             141,211
@@ -567,7 +567,7 @@
                             CO2 Emmisions Saved
                         </p>
                     </span>
-            </div><div class="col-xs-24 col-sm-6 col-lg-8">
+            </div><div class="col-xs-24 col-lg-8">
                     <span style="" class="text-center">
                         <h2 class="t-72 text-color-white">
                             141,211
@@ -583,7 +583,7 @@
 <section class="products p-4 pt-8 pb-8 bg-white">
     <div class="container">
         <div class="row ">
-            <div class="col-xs-24 col-sm-6 col-lg-8">
+            <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">From our News Desk</h5>
                 <div id="news" class="threadContainer">
                     <div class="excerpt">
@@ -625,7 +625,7 @@
                 </div>
                 </div>
             </div>
-            <div class="col-xs-24 col-sm-6 col-lg-8">
+            <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">Social</h5>
                 <div id="social" class="threadContainer">
                     <div class="excerpt">
@@ -672,7 +672,7 @@
 
                 </div>
             </div>
-            <div class="col-xs-24 col-sm-6 col-lg-8">
+            <div class="col-xs-24  col-lg-8">
                 <h5 class="mb-4 mt-6">Press Releases and News Articles</h5>
                 <div id="press" class="threadContainer">
                     <div class="excerpt">
@@ -722,7 +722,7 @@
             <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
-            <div class="col-lg-8 text-center text-md-left order-2 order-sm-1">
+            <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
                 <h3 style="font-size: 1em;font-weight:400;margin: 10px 0;color:white">
                     <span class="pr-3">
                         <svg width="28" height="27" viewBox="0 0 28 27" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -745,16 +745,16 @@
                 <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
                 <p>1-631 1797</p><p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
             </div>
-            <div class="col-lg-6 text-center text-md-left order-1 order-sm-2 d-flex" style="flex-direction: column; align-items: center">
+            <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex" style="flex-direction: column; align-items: center">
                 <h3 class="footer-h">Company</h3>
                 <nav  class="">
                     <ul id="menu-footer" class="nav nav-footer flex-column">
                     <li  class="">
-                        <a href="/history" class="">Overview</a></li>
+                        <a href="/history/index.html" class="">Overview</a></li>
                     <li class="">
-                        <a href="/history" class="">About Us</a></li>
+                        <a href="/history/index.html" class="">About Us</a></li>
                     <li class="">
-                        <a href="/leadership" class="">
+                        <a href="/leadership/index.html" class="">
                             Our Team
                         </a>
                     </li>
@@ -765,7 +765,7 @@
             <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                 <img src="/images/toTop.svg" class="img-fluid">
             </span>
-            <div class="col-lg-8 d-flex text-center text-md-left order-3" style="flex-direction: column;">
+            <div class="col-lg-8 d-flex text-center text-lg-left order-3" style="flex-direction: column;">
                 <div>
                     <h3 class="footer-h">Also connect with us on social media</h3>
                     <p style="display: inline-block;">
@@ -793,6 +793,6 @@
         </div>
 </footer>                
                                 <script src="/dist/vendor.js"></script>
-        <script src="/dist/new.js"></script>
+        <script src="/dist/top.js"></script>
     </body>
 </html>
