Pagination, Datepicker, Editor, Load More, Similar Articles, Mobile Navigation

--- a/mission/index.html
+++ b/mission/index.html
@@ -97,11 +97,11 @@
         <h1 style="text-align: center">Mission, Vision and Core Values</h1>
         <p>We are synonymous with innovation, building excellence, and creating role models for society.</p>
         <div class="row">
-            <div class="col-xs-24 col-md-12 p-8 pb-2">
+            <div class="col-xs-24 col-md-12 p-4 p-lg-8 pb-2">
                 <img src="/images/goal.svg">
                 <h4>Mission</h4>
                 <p>To be the market leader in delivering technologically innovative clean energy solutions in Nigeria and West Africa”</p>
-            </div><div class="col-xs-24 col-md-12 p-8 pb-2">
+            </div><div class="col-xs-24 col-md-12 p-4 p-lg-8 pb-2">
                 <img src="/images/globe.svg">
                 <h4>Vision</h4>
                 <p>
