--- a/single/index.html
+++ b/single/index.html
@@ -94,11 +94,7 @@
 </header>
             <section style="" class="pt-8 pb-8">
     <div class="container">
-        <div class="text-center mb-8">
-            <h1>Press Release and News articles</h1>
-            <p>News updates, newly published reports and articles from Rensource</p>
-        </div>
-        <div class="row justify-content-center" id="article"></div>
+        <div id="article"></div>
     </div>
 </section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
