--- a/contact/index.html
+++ b/contact/index.html
@@ -101,13 +101,13 @@
     <section style="background: #232323">
 <!--        <div class="container">-->
             <div class="row no-gutters">
-                <div class="col-lg-12 p-8">
-                    <h1 class="text-color-yellow h4">Head Office</h1>
+                <div class="col-lg-12 p-4 p-lg-8 text-color-light">
+                    <h1 class="text-color-yellow h4" style="text-transform:uppercase;font-weight: 700">Head Office Address</h1>
                     <p>
                         Rensource Distributed Energy Limited<br/>
                         3B, Tiamiyu Savage Street<br/>
                         Victoria Island, Lagos<br/>
-                        Nigeria<br/>
+                        Nigeria<br/><br/><br/>
                         <span>01-631 1797</span><br/>
                         <span>support@rensource.energy</span><br/>
                     </p>
@@ -147,14 +147,16 @@
     <section class="pt-8 pb-6 bg-white">
         <div class="row justify-content-center">
             <div class="col-xs-24 col-lg-10">
-                <form class="bg-yellow br-6 p-lg-8 p-3 text-center sub" style="background: url(/images/idea.svg) no-repeat;background-position: bottom right">
-                    <h4>Subscribe to our newsletter to receive more information and updates.</h4>
-                    <div class="form-group">
-                        <div class="label d-none">Email</div>
-                        <input type="text" class="form-control bg-transparent" name="email" id="emailSub" placeholder="Email" style="border-bottom: 1px solid #232323"/>
-                    </div>
-                    <button class="btn btn-gray-dark text-color-yellow mr-auto">Subscribe</button>
-                </form>
+                <div class="bg-yellow br-4 m-3" style="background: url(/images/idea.svg) no-repeat;background-position: right 120px">
+                    <form class="p-lg-6 p-3 text-center sub">
+                        <h4 class="mb-3 mt-3">Subscribe to our newsletter to receive more information and updates.</h4>
+                        <div class="form-group mb-3 mt-3">
+                            <label class="label d-none">Email</label>
+                            <input type="text" class="form-control bg-transparent" name="email" id="emailSub" placeholder="Email" style="border-bottom: 1px solid #232323"/>
+                        </div>
+                        <button class="btn btn-gray-dark text-color-yellow mr-auto br-2 mb-3 mt-3">Subscribe</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
