Update video reference

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             data-setup='{}'
                             style="box-shadow: 2px 2px 50px #ccc"
                     >
-                        <source src="/videos/RENSOURCE-Who we are.mp4" type="video/mp4"></source>
+                        <source src="https://s3.eu-central-1.amazonaws.com/rensource.energy/Rensource.Website.Video" type="video/mp4"></source>
                         <p class="vjs-no-js">
                             To view this video please enable JavaScript, and consider upgrading to a
                             web browser that
