Media Page, Careers Page and Navigation

--- a/careers/index.html
+++ b/careers/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head lang="en">
-        <title>Posts Archive &mdash; Rensource &mdash; Revolutionizing energy provision in Africa</title>
+        <title>Careers &mdash; Rensource &mdash; Revolutionizing energy provision in Africa</title>
         <meta charset="utf-8">
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -99,14 +99,14 @@
 
     </nav>
 </header>
-            <h2>Posts Archive</h2>
-        <h3>December 2011</h3>
-  <div>
-    <a href="/happy-birthday-sculpin.html">Happy Birthday Sculpin!</a>
-  </div>
+            <section style="" class="pt-8 pb-8">
+    <div class="container">
+        <div class="text-center mb-4">
+            <h1>Careers</h1>
+        </div>
 
-<div>
-</div>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
+    </div>
+</section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
         <div class="row justify-content-between" style="padding: 10px 0; padding-bottom: 20px;">
             <div class="col-lg-8 text-center text-lg-left order-2 order-sm-1">
