--- a/manage_article_types/index.html
+++ b/manage_article_types/index.html
@@ -150,6 +150,11 @@
                             Our Team
                         </a>
                     </li>
+                        <li class="">
+                        <a href="/careers/index.html" class="">
+                            Careers
+                        </a>
+                    </li>
                 </ul>
                 </nav>
                 <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
