--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <script>
                     let locs = document.querySelectorAll(".location");
                     locs.forEach(elem => {
-                        elem.style.top = elem.dataset['x']
+                        elem.style.top = elem.dataset['x'];
                         elem.style.left = elem.dataset['y']
                     })
                 </script>
@@ -193,7 +193,8 @@
         </div>
     </div>
 
-</section><section class="products bg-white p-4 pt-8 pb-8 text-md-center text-left"
+</section>
+<section class="products bg-white p-4 pt-8 pb-8 text-md-center text-left"
          style="background-image: url(images/Nigeria.svg), url(images/Nigeria.svg);
          background-repeat:  no-repeat, no-repeat;
          background-size: 600px;
@@ -564,25 +565,26 @@
         </span>
         <div class="row">
             <div class="col-xs-24 col-lg-8 col-lg-offset-8">
-                <span style="" class="text-center">
-                    <h2 class="t-72 text-color-white">
-                        76,575L
-                    </h2>
-                    <p class="text-color-yellow">
-                        Litres of Fuel Saved
-                    </p>
-                </span>
+                            <span style="" class="text-center">
+                                <h2 class="t-72 text-color-white">
+                                    76,575L
+                                </h2>
+                                <p class="text-color-yellow">
+                                    Litres of Fuel Saved
+                                </p>
+                            </span>
             </div>
             <div class="col-xs-24 col-lg-8 offset-lg-8">
-                <span style="" class="text-center">
-                    <h2 class="t-72 text-color-white">
-                        179.800MT
-                    </h2>
-                    <p class="text-color-yellow">
-                        CO2 Emmisions Saved
-                    </p>
-                </span>
+                            <span style="" class="text-center">
+                                <h2 class="t-72 text-color-white">
+                                    179.800MT
+                                </h2>
+                                <p class="text-color-yellow">
+                                    CO2 Emmisions Saved
+                                </p>
+                            </span>
             </div>
+        </div>
         </div>
     </div>
 </section>
