--- a/media/index.html
+++ b/media/index.html
@@ -104,7 +104,9 @@
         <div class="text-center mb-4">
             <h1>Media</h1>
         </div>
-
+        <div id="videos" data-src='[{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },
+        { "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" }]' data-row-height="300" data-col-size="col-lg-12 col-sm-24 col-xs-24"></div>
+        <div id="media" class="container pt-8 pb-8"></div>
     </div>
 </section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
