Perf and News Entry

--- a/media/index.html
+++ b/media/index.html
@@ -6,10 +6,10 @@
         <meta name="theme-color" content="#ffffff">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
                     <meta name="robots" content="noindex, follow">
-                <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">
+        <!--        <link rel="stylesheet" href="https://use.typekit.net/wvt4umv.css">-->
         <link rel="stylesheet" href="https://use.typekit.net/uff1hva.css">
         <link href="/dist/top.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">
+<!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
 
 
                                     </head>
@@ -104,11 +104,9 @@
         <div class="text-center mb-4">
             <h1>Media</h1>
         </div>
-        <div id="videos" class="mb-4" data-src='[{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "https://s3.eu-central-1.amazonaws.com/rensource.energy/Rensource.Website.Video" },
-        { "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "https://s3.eu-central-1.amazonaws.com/rensource.energy/Rensource.Website.Video" },{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" }]' 
-        data-row-height="700" data-col-size="col-lg-12 col-sm-24 col-xs-24"></div>
+        <div id="videos" data-src='[{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" },
+        { "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "/videos/Rensource What we do.mp4" }]' data-row-height="300" data-col-size="col-lg-12 col-sm-24 col-xs-24"></div>
         <div id="media" class="container pt-8 pb-8"></div>
-        
     </div>
 </section>            <footer style="color:#B0B0B0;background-color: #282828; position: relative" class="pt-6 t-14 leading-5">
     <div class="container">
