fix/change media text to video gallery

--- a/media/index.html
+++ b/media/index.html
@@ -124,7 +124,7 @@
     <section style="" class="pt-8 pb-8">
         <div class="container">
             <div class="text-center mb-4">
-                <h1>Media</h1>
+                <h1>Video Gallery</h1>
             </div>
             <!-- <div id="videos" class="mb-4" data-src='[{ "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "https://s3.eu-central-1.amazonaws.com/rensource.energy/Rensource.Website.Video" },
                 { "id": "ra", "poster": "/videos/poster image for what we do.png", "src": "https://s3.eu-central-1.amazonaws.com/rensource.energy/bloomberg.mp4" },
