fix/ remove leadership card

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -204,7 +204,8 @@
                 </a>
             </p>
         </div>
-    </div><div class="col-xs-24 col-md-8">
+    </div>
+    <!-- <div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
             <img src="/images/senior_management/CTO.jpg" class="portrait-img"/>
@@ -221,7 +222,8 @@
                 </a>
             </p>
         </div>
-    </div><div class="col-xs-24 col-md-8">
+    </div> -->
+    <div class="col-xs-24 col-md-8">
         <div class="p-6">
             <div class="portrait mb-2">
             <img src="/images/senior_management/VP_finance.png" class="portrait-img"/>
